Updated environment numbering, moved files around.

--- a/main.tex
+++ b/main.tex
@@ -14,7 +14,9 @@
 \maketitle 
 \tableofcontents
 
-\subfile{segal_spans.tex}
+\subfile{cocart_fibs.tex}
+\subfile{unconstrained_spans.tex}
+\subfile{constrained_spans.tex}
 %\subfile{extra.tex}
 
 \printbibliography
