--- a/mystyle.sty
+++ b/mystyle.sty
@@ -158,23 +158,14 @@
 
 % Declare theorem styles
 \theoremstyle{definition}
-\newtheorem{definition}{Definition}
-\newtheorem{example}[definition]{Example}
-\newtheorem{recurring_example}[definition]{Recurring Example}
-\newtheorem{counterexample}[definition]{Counterexample}
-\newtheorem{fact}[definition]{Fact}
-\newtheorem{joke}[definition]{Joke}
-\newtheorem{scheme}[definition]{Cockamamie Scheme}
-
-%\theoremstyle{plain}
-\newtheorem{theorem}[definition]{Theorem}
+\newtheorem{theorem}{Theorem}[subsection]
+\newtheorem{definition}[theorem]{Definition}
+\newtheorem{example}[theorem]{Example}
 \newtheorem*{theorem*}{Theorem}
-\newtheorem{lemma}[definition]{Lemma}
-\newtheorem{corollary}[definition]{Corollary}
-\newtheorem{proposition}[definition]{Proposition}
+\newtheorem{lemma}[theorem]{Lemma}
+\newtheorem{corollary}[theorem]{Corollary}
+\newtheorem{proposition}[theorem]{Proposition}
 
 \theoremstyle{remark}
-\newtheorem{claim}[definition]{Claim}
-\newtheorem{recipe}[definition]{Recipe}
-\newtheorem{note}[definition]{Note}
-\newtheorem{notation}[definition]{Notation}
+\newtheorem{note}[theorem]{Note}
+\newtheorem{notation}[theorem]{Notation}
