Committing before adding 'generic marking' business

--- a/main.tex
+++ b/main.tex
@@ -6,7 +6,7 @@
 %bibliography location
 \addbibresource{sources.bib}
 
-\title{Complete Segal Spaces of Spans}
+\title{Cocartesian fibrations between Segal \\ spaces of spans}
 \author{Angus Rush}
 
 \begin{document}
@@ -14,9 +14,11 @@
 \maketitle 
 \tableofcontents
 
+\subfile{introduction.tex}
 \subfile{cocart_fibs.tex}
-\subfile{unconstrained_spans.tex}
+%\subfile{unconstrained_spans.tex}
 \subfile{constrained_spans.tex}
+\subfile{appendix.tex}
 %\subfile{extra.tex}
 
 \printbibliography
