Pushing everything after a weird vimtex scare

--- a/main.tex
+++ b/main.tex
@@ -18,6 +18,7 @@
 \subfile{cocart_fibs.tex}
 %\subfile{unconstrained_spans.tex}
 \subfile{constrained_spans.tex}
+\subfile{application_to_presheaves.tex}
 \subfile{appendix.tex}
 %\subfile{extra.tex}
 
