--- a/mystyle.sty
+++ b/mystyle.sty
@@ -108,8 +108,8 @@
 \newcommand{\Sig}{\Sigma}
 \newcommand{\Lam}{\Lambda}
 \newcommand{\CGHaus}{\catname{CGHaus}}
-\newcommand{\Set}{\catname{Set}}
-\newcommand{\pSet}{\catname{Set}_{*}}
+\newcommand{\Set}{\mathcal{S}\mathrm{et}}
+\newcommand{\pSet}{\Set_{*}}
 %\renewcommand{\Top}{\catname{Top}}
 \newcommand{\Ab}{\catname{Ab}}
 \newcommand{\Vect}{\catname{Vect}}
@@ -120,12 +120,12 @@
 \newcommand{\modR}{\catname{Mod}\text{-}R}
 \newcommand{\Pair}{\catname{Pair}}
 \newcommand{\Mod}{\catname{Mod}}
-\newcommand{\SSet}{\catname{Set}_{\D}}
-\newcommand{\SSSet}{\catname{Set}_{\D^{2}}}
+\newcommand{\SSet}{\Set_{\D}}
+\newcommand{\SSSet}{\Set_{\D^{2}}}
 \newcommand{\Kan}{\catname{Kan}}
-\newcommand{\SCat}{\catname{Cat}_{\D}}
-\newcommand{\ICat}{\catname{Cat}_{\infty}}
-\newcommand{\Cat}{\catname{Cat}}
+\newcommand{\Cat}{\mathcal{C}\mathrm{at}}
+\newcommand{\SCat}{\Cat_{\D}}
+\newcommand{\ICat}{\Cat_{\infty}}
 \newcommand{\Seg}{\catname{Seg}}
 \newcommand{\CSS}{\catname{CSS}}
 \newcommand{\Corr}{\catname{Corr}}
@@ -149,6 +149,8 @@
 \newcommand{\flt}{^{\flat}}
 \newcommand{\ing}{\rightarrowtail}
 \newcommand{\eg}{\twoheadrightarrow}
+\newcommand{\updag}{^{\dagger}}
+\newcommand{\downdag}{_{\dagger}}
 
 % Dirty typesetting hacks
 \newcommand{\lmarkedparen}{\mathrlap{(}\text{\textbf{-}}}
