--- a/sources.bib
+++ b/sources.bib
@@ -39,6 +39,12 @@
   Howpublished = {Contemp.\ Math. 431 (2007), pp. 277--326},
 }
 
+@article{luriehigheralgebra,
+  Author       = {J. Lurie},
+  Title        = {Higher Algebra},
+  Year         = {2017},
+}
+
 @misc{spectralmackeyfunctors2,
   Author       = {C. Barwick, S. Glasman, J. Shah},
   Title        = {Spectral Mackey functors and equivariant algebraic K-theory (II)},
