--- a/cocart_fibs.tex
+++ b/cocart_fibs.tex
@@ -371,7 +371,10 @@ The marked constructions above have similar properties to the unmarked construct
 
 This shows that the marked version of the box product $\square$ is, in the language of \cite{qcats_vs_segal_spaces}, \emph{divisible on the left and on the right.} Thus, the results summarized in \hyperref[sss:divisibility_of_bifunctors]{Section~\ref*{sss:divisibility_of_bifunctors}} apply.
 
-We will call an inclusion of unmarked simplicial sets $B \hookrightarrow B'$ \emph{full} if it has the following property: an $n$-simplex $\sigma\colon \Delta^{n} \to B'$ factors through $B$ if and only if each vertex of $\sigma$ factors through $B$. That is, any $n$-simplex in $B'$ whose vertices belong to $B$ belongs to $B$.
+\begin{definition}
+  \label{def:full_inclusion}
+  We will call an inclusion of unmarked simplicial sets $B \hookrightarrow B'$ \emph{full} if it has the following property: an $n$-simplex $\sigma\colon \Delta^{n} \to B'$ factors through $B$ if and only if each vertex of $\sigma$ factors through $B$. That is, any $n$-simplex in $B'$ whose vertices belong to $B$ belongs to $B$.
+\end{definition}
 
 \begin{lemma}
   For any marked simplicial set $A$ and Reedy-fibrant marked bisimplicial set $X$, the simplicial set $A \backslash X$ is a Kan complex, and the inclusion $i\colon A \backslash X \hookrightarrow A^{\flat} \backslash X \cong \mathring{A} \backslash \mathring{X}$ is full.
