--- a/constrained_spans.tex
+++ b/constrained_spans.tex
@@ -191,40 +191,42 @@ to be the full simplicial subset on functors $\sd(A)$ such that for each standar
 For a proof that this really is a Segal space, the reader is once again referred to \cite{spectralmackeyfunctors1}.
 
 \begin{example}
-  For any quasicategory, we can define a triple $(\category{C}, \category{C}\downdag = \category{C}, \category{C}\updag = \category{C}^{\simeq})$. The corresponding spans are of the form
+  \label{eg:spans_with_equivalences_on_one_leg}
+  For any quasicategory, we can define a triple $(\category{C}, \category{C}\downdag = \category{C}, \category{C}\updag = \category{C}^{\simeq})$. These selections of ingressive and egressive morphisms correspond to spans of the form
   \begin{equation*}
     \begin{tikzcd}
-      & y
+      & Y
       \arrow[dl, swap, "\simeq"]
       \arrow[dr]
       \\
-      x
-      && x'
+      X
+      && X'
     \end{tikzcd},
   \end{equation*}
-  where $Y \to X$ is an equivalence in $\category{C}$.
+  i.e.\ spans such that the backwards-facing map $Y \to X$ is an equivalence in $\category{C}$. A functor $\sd(\Delta^{n}) \to \category{C}$ is ambigressive cartesian if and only if each backward-facing leg is an equivalence. Note that the triple $(\category{C}, \category{C}, \category{C}^{\simeq})$ defined above is adequate even if $\category{C}$ does not admit pullbacks: for any solid diagram of below, where $g$ is an equivalence, the dashed square completion is a pullback, where $g^{-1}$ is any homotopy inverse for $g$.
+  \begin{equation*}
+    \begin{tikzcd}
+      X
+      \arrow[r, dashed, "g^{-1} \circ f"]
+      \arrow[d, swap, equals]
+      & X'
+      \arrow[d, "g"]
+      \\
+      X
+      \arrow[r, "f"]
+      & Y'
+    \end{tikzcd}
+  \end{equation*}
 
-  The resulting quasicategory of spans is categorically equivalent to the category $\category{C}$ from which we started. To see this, note that for each $n \geq 0$ there is a retraction of posets
+  We will denote the resulting Segal space of spans by $\SPAN^{\simeq}(\category{C})$, and the quasicategory $\SPAN^{\simeq}(\category{C})/\Delta^{0}$ by $\Span^{\simeq}(\category{C})$. 
+
+  The quasicategory $\Span^{\simeq}(\category{C})$ is categorically equivalent to the category $\category{C}$ from which we started. More specifically, there exists a weak categorical equivalence $\category{C} \to \Span^{\simeq}(\category{C})$. We will now construct this map. 
+
+  Note that for each $n \geq 0$ there is a retraction of posets
   \begin{equation*}
     [n] \hookrightarrow \Sigma_{n} \twoheadrightarrow [n],
   \end{equation*}
-  where the first map takes $i \mapsto (i, n)$, and the second takes $(i, j) \mapsto i$. Under the nerve, this corresponds to a retraction of simplicial sets
-  \begin{equation*}
-    \Delta^{n} \hookrightarrow \sd(\Delta^{n}) \twoheadrightarrow \Delta^{n}.
-  \end{equation*}
-  Pulling back along these maps gives us, for each $n$, a retraction
-  \begin{equation*}
-    \begin{tikzcd}
-      \Fun(\Delta^{n}, \category{C}) 
-      \arrow[r, hook, "i_{n}"]
-      & \Fun(\sd(\Delta^{n}), \category{C}) 
-      \arrow[r, hook, "r_{n}"]
-      & \Fun(\Delta^{n}, \category{C})
-    \end{tikzcd}.
-  \end{equation*}
-  Note that the image of the inclusion $i$
-
-  It is not hard to convince oneself that a map $\sd(\Delta^{n}) \to \category{C}$ is ambigressive cartesian if and only if it is a right Kan extension of its restriction along $\Delta^{n} \hookrightarrow \sd(\Delta^{n})$. In the case $n = 2$, the inclusion $[2] \hookrightarrow \Sigma_{2}$ is of the form
+  where the first map takes $i \mapsto (i, n)$, and the second takes $(i, j) \mapsto i$. In the case $n = 2$, the inclusion can be drawn
   \begin{equation*}
     \begin{tikzcd}[row sep=small, column sep=tiny]
       0
@@ -251,32 +253,76 @@ For a proof that this really is a Segal space, the reader is once again referred
       (0, 0)
       && (1, 1)
       && (2, 2)
-    \end{tikzcd}.
-  \end{equation*}
-  The right Kan extension of a diagram $\Delta^{2} \to \category{C}$ 
-
-  The inclusions $\Delta^{n} \to \sd(\Delta^{n})$ does not yield a map of cosimplicial objects $\Delta^{\bullet} \to \sd(\Delta^{\bullet})$, but the projections $\sd(\Delta^{n}) \to \Delta^{n}$ do, giving us a map of cosimplicial objects $\sd(\Delta^{\bullet}) \to \Delta^{\bullet}$. 
-
-  There is an equivalence of Segal spaces
-  \begin{equation*}
-    \Gamma(\category{C}) \to \SPAN(\category{C}, \category{C}, \category{C}^{\simeq}),
-  \end{equation*}
-  where $\Gamma(\category{C})$ is the Segal space defined level-wise by
-  \begin{equation*}
-    \Gamma(\category{C})_{n} = \Fun(\Delta^{n}, \category{C}).
-  \end{equation*}
-  This sends a morphism $f\colon x \to y$ in $\category{C}$ to the span
-  \begin{equation*}
-    \begin{tikzcd}
-      & x
-      \arrow[dl, equals]
-      \arrow[dr]
-      \\
-      x
-      && x'
     \end{tikzcd},
   \end{equation*}
+  and the map $\sd(\Delta^{n}) \to \Delta^{n}$ `collapses' the leftward-facing legs of the spans.
+
+  Applying the nerve, we find a retraction of simplicial sets
+  \begin{equation*}
+    \Delta^{n} \hookrightarrow \sd(\Delta^{n}) \twoheadrightarrow \Delta^{n}.
+  \end{equation*}
+  Pulling back along these maps gives us, for each $n$, a retraction
+  \begin{equation*}
+    \begin{tikzcd}
+      \Fun(\Delta^{n}, \category{C}) 
+      \arrow[r, hook, "i'_{n}"]
+      & \Fun(\sd(\Delta^{n}), \category{C}) 
+      \arrow[r, hook, "r'_{n}"]
+      & \Fun(\Delta^{n}, \category{C})
+    \end{tikzcd}.
+  \end{equation*}
+  Note that the image of the inclusion $i'_{n}$ consists of spans whose backwards-facing legs are identities (hence certainly equivalences), and hence that we can restrict the total space of our retraction:
+  \begin{equation*}
+    \begin{tikzcd}
+      \Fun(\Delta^{n}, \category{C}) 
+      \arrow[r, hook, "i_{n}"]
+      & \Fun^{\aCart}(\sd(\Delta^{n}), \category{C}) 
+      \arrow[r, two heads, "r_{n}"]
+      & \Fun(\Delta^{n}, \category{C})
+    \end{tikzcd}.
+  \end{equation*}
+
+  It is not hard to convince oneself that a map $\sd(\Delta^{n}) \to \category{C}$ is ambigressive cartesian if and only if it is a right Kan extension of its restriction along $\Delta^{n} \hookrightarrow \sd(\Delta^{n})$. In the case $n = 2$, for example, it is clear from the limit formula that any right Kan extension of a diagram $\Delta^{2} \to \category{C}$ along the inclusion $\Delta^{2} \hookrightarrow \sd(\Delta^{2})$ is of the form
+  \begin{equation*}
+    \begin{tikzcd}[row sep=small, column sep=tiny]
+      X
+      \arrow[dr]
+      \\
+      & Y
+      \arrow[dr]
+      \\
+      && Z
+    \end{tikzcd}
+    \qquad \hookrightarrow \qquad
+    \begin{tikzcd}[row sep=small, column sep=tiny]
+      && X
+      \arrow[dl, swap, "\simeq"]
+      \arrow[dr]
+      \\
+      & X'
+      \arrow[dl, swap, "\simeq"]
+      \arrow[dr]
+      && Y
+      \arrow[dl, swap, "\simeq"]
+      \arrow[dr]
+      \\
+      X''
+      && Y'
+      && Z
+    \end{tikzcd},
+  \end{equation*}
+  (and conversely, any diagram of the above form is a right Kan extension), and diagrams of the above form are precisely those which are ambigressive cartesian. Put differently, $\Fun^{\aCart}(\sd(\Delta^{n}), \category{C})$ is the full subcategory of $\Fun(\sd(\Delta^{n}), \category{C})$ on functors which are right Kan extensions of their restrictions to $\Delta^{n}$. This, together with \cite[Prop.\ 4.3.2.15]{highertopostheory} implies that $r_{n}$ is a trivial fibration for all $n$. The identity $\id_{\Fun(\Delta^{n}, \category{C})}$ is certainly a weak Kan equivalence, so by the $2/3$ property for weak equivalences, $i_{n}$ is also a weak equivalence for all $n$.
+
+  The projections $\sd(\Delta^{n}) \to \Delta^{n}$ assemble into a cosimplicial object $\sd(\Delta^{\bullet}) \to \Delta^{\bullet}$. This means that the maps $i_{n}$ assemble into a map of Segal spaces
+  \begin{equation*}
+    i\colon \Gamma(\category{C}) = \Fun(\Delta^{\bullet}, \category{C}) \to \Fun^{\aCart}(\sd(\Delta^{\bullet}), \category{C}) = \SPAN^{\simeq}(\category{C})
+  \end{equation*}
+  which is a level-wise Kan weak equivalence, and hence a weak equivalence in the complete Segal spaces model structure (for more information, see \cite{qcats_vs_segal_spaces}, especially the discussion following Thm.\ 4.1). Here $\Gamma(\category{C})$ is the complete Segal space defined in \cite{qcats_vs_segal_spaces} in the discussion preceding Thm.\ 4.11.
+
+  Thus, the restricion of $i$ to first rows $i / \Delta^{0}$ is a Joyal weak equivalence, which is what we wanted to show.
 \end{example}
+
+\subsubsection*{Maps between triples}
 
 A functor between adequate triples $\triple{C} \to \triple{D}$ is a functor
 \begin{equation*}
@@ -324,16 +370,16 @@ The goal of the remainder of this document is to provide a proof of the followin
       && x'
     \end{tikzcd},
   \end{equation*}
-  where $\phi$ is egressive and $p^{\dagger}$-cartesian, and $\psi$ is ingressive and $p$-cocartesian, it is $\pi$-cocartesian.\footnote{This is not precisely the same condition that Barwick gives: he demands that $\phi$ be $p$-cartesian rather than $p^{\dagger}$-cartesian. As far as I can tell, this is simply an error; Barwick seems to use the condition as stated above in his proof.}
+  where $\phi$ is egressive and $p^{\dagger}$-cartesian, and $\psi$ is ingressive and $p$-cocartesian, it is $\pi$-cocartesian.%\footnote{This is not precisely the same condition that Barwick gives: he demands that $\phi$ be $p$-cartesian rather than $p^{\dagger}$-cartesian. As far as I can tell, this is simply an error; Barwick seems to use the condition as stated above in his proof.}
 \end{theorem}
 
-This theorem originally appears in \cite{spectralmackeyfunctors1} (although, as noted above, the assumptions are slightly different). However, the proof there is combinatorial in nature. Our proof uses the material developed in \hyperref[sec:cocartesian_fibrations_between_complete_segal_spaces]{Section~\ref*{sec:cocartesian_fibrations_between_complete_segal_spaces}}, leveraging the fact that $\infty$-categories of spans have natural incarnations as (complete) Segal spaces.
+This theorem originally appears in \cite{spectralmackeyfunctors1}. However, the proof there is combinatorial in nature. Our proof uses the material developed in \hyperref[sec:cocartesian_fibrations_between_complete_segal_spaces]{Section~\ref*{sec:cocartesian_fibrations_between_complete_segal_spaces}}, leveraging the fact that $\infty$-categories of spans have natural incarnations as (complete) Segal spaces.
 
 Before we get to the meat of the proof, however, we have to prove some preliminary results.
 
 \subsection{Housekeeping}
 
-In this section we recall some basic facts we will need in the course of our proof of the main theorem. 
+In this section we recall some basic facts we will need in the course of our proof of the main theorem. It is recommended to skip this section on first reading, and refer back to the results as necessary.
 
 \subsubsection*{Isofibrations}
 
